--- a/api/views/footer.pug
+++ b/api/views/footer.pug
@@ -1,4 +1,4 @@
-footer.footer
+footer.page-footer.bg-light.fixed-bottom
   .container.text-center
     br
     h5= `Umami ${new Date().getFullYear()} | All rights reserved`
