Fix footer in layout

--- a/api/views/footer.pug
+++ b/api/views/footer.pug
@@ -1,4 +1,4 @@
-footer.page-footer.bg-light.fixed-bottom
+footer.page-footer.bg-light(style="position: absolute; bottom: 0; right: 0; left:0;")
   .container.text-center
     br
     h5= `Umami ${new Date().getFullYear()} | All rights reserved`
