--- a/website/src/App.css
+++ b/website/src/App.css
@@ -1,8 +1,9 @@
 .barra-superior {
-  position: absolute;
-width: 1300px;
+  /* position: absolute; */
+max-width: 1300px;
 height: 123px;
 left: 0px;
 top: 0px;
+margin: 0 auto;
 
 }
