--- a/api/views/layout.pug
+++ b/api/views/layout.pug
@@ -9,7 +9,7 @@ html(lang="en")
 
     title Api - Admin
 
-  body.d-flex.flex-column.min-vh-100(style="position: relative")
+  body.d-flex.flex-column.min-vh-100.justify-content-between
     include navbar.pug
     block content
     include footer.pug
