Change margin for admin name

--- a/api/views/navbar.pug
+++ b/api/views/navbar.pug
@@ -3,8 +3,8 @@ nav.navbar.navbar-light.bg-light
     img(src="" width="30" height="30" class="d-inline-block align-top" alt="Umami" loading="lazy")
     Umami
   if user
-    .text-left
-      .d-flex.flex-column.align-items-end.pd-1
+    .text-left.mr-2
+      .d-flex.flex-column.align-items-end
         .badge.badge-pill.badge-primary
           h6= user
         a(href='/admin/logout') Salir
