Change url for edit admin

--- a/api/views/adminPanel.pug
+++ b/api/views/adminPanel.pug
@@ -45,7 +45,7 @@ block content
                       .card-body
                         h5.card-title= item.user
                         if item.user === user
-                          a(href=`/admin/${item._id}` class="btn btn-info") Edición
+                          a(href=`/admin/edit/${item._id}` class="btn btn-info") Edición
 
     br
     span.badge.badge-secondary.mt-5.mb-3.p-2
