--- a/website/src/components/css/receta.css
+++ b/website/src/components/css/receta.css
@@ -1,3 +1,4 @@
+
 .contenedor-receta {
     position: relative;
     width: 350px;
@@ -14,17 +15,27 @@
     line-height: 27px;
     text-align: center;
     padding: 20px 0;
+    
     /* identical to box height */
-
-
     color: #000000;
+}
+
+.titulo-seccion {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 45px;
+    display: block;
+    text-align: center;
+    padding: 70px 0 40px 0;
 }
 
 .contenedor-receta figure {
     
     margin: 0;
     text-align: center;
-    /* height: 50%;
+        /* height: 50%;
     overflow: hidden;     */
     
 }
@@ -33,6 +44,7 @@
     display: flex;
     text-align: center;
     justify-content: space-around;
+    
 }
 
 .texto-gris {
@@ -48,7 +60,8 @@
 }
 
 .icono {
-    font-size: 22px;
+    font-size: 22px; 
+    color: black;   
 }
 
 .receta-caja {
@@ -56,8 +69,10 @@
     flex-wrap: wrap;
     max-width: 100vw;
     justify-content: space-around;
+    
 }
 
 .foto-receta {
     background-size: cover;
 }
+
