--- a/website/src/components/css/receta.css
+++ b/website/src/components/css/receta.css
@@ -5,6 +5,7 @@
     height: auto;			
     border: 1px solid black;
     margin: 20px;
+    overflow: hidden;
 }
 
 .nombre-receta {
@@ -76,3 +77,17 @@
     background-size: cover;
 }
 
+.imagen-animada:hover {
+    transform: scale(1.1);
+    animation: animacionImagenes 1s ease-in-out infinite alternate;
+}
+
+@keyframes animacionImagenes {
+    from {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
+}
