--- a/website/src/components/css/ingreso.css
+++ b/website/src/components/css/ingreso.css
@@ -2,8 +2,8 @@
     width: 400px;
     height: 380px;
     border: solid 1px black;
-    padding-top: 10px;
-
+    padding-top: 100px;
+    padding-bottom: 100px;
     text-align: center;
     font-family: 'Poppins', sans-serif;
 }
@@ -48,7 +48,7 @@
 .data-record .login {
     
     margin-top: 30px;
-    width: 100px;
+    width: 200px;
     height: 35px;
     background-color: #280004;
     color: white; 
